fixed overflow issue

--- a/src/styles/base/_Landing.scss
+++ b/src/styles/base/_Landing.scss
@@ -7,7 +7,6 @@
     width:100%;
     height:100vh;
     overflow: hidden;
-    padding:5px 1rem;
 
     .Image-Container{
         width:100%;
